[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/naves/player/laser/canion.gd" type="Script" id=1]
[ext_resource path="res://Juego/naves/player/laser/LaserPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/naves/player/laser/laserPrincipalPlayer.ogg" type="AudioStream" id=3]

[node name="canion" type="Node2D"]
script = ExtResource( 1 )
proyectil = ExtResource( 2 )
cadencia_disparo = 0.3
velocidad_proyectil = 1000.0

[node name="PuntoIzquierdo" type="Position2D" parent="."]
position = Vector2( 0, -4.06893 )

[node name="PuntoDerecho" type="Position2D" parent="."]
position = Vector2( 0.0936432, 3.65212 )

[node name="DisparosSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "sfx"

[node name="timerEnfriamiento" type="Timer" parent="."]
wait_time = 0.8
[connection signal="timeout" from="timerEnfriamiento" to="." method="_on_timerEnfriamiento_timeout"]
